--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Test
         run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Plython flake8
-        run: docker compose run -rm app sh -c "flake8"
+        run: docker compose run --rm app sh -c "flake8"
