--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -41,9 +41,9 @@ jobs:
       - name: Terrafrom lint
         run: |
           cd infra/
-          docker compose run --rm terrafrom -chdir=deploy/ init -backend=false
-          docker compose run --rm terrafrom -chdir=setup/ init -backend=false
-          docker compose run --rm terrafrom -chdir=deploy/ validate
-          docker compose run --rm terrafrom -chdir=deploy/ fmt -check
-          docker compose run --rm terrafrom -chdir=setup/ validate
-          docker compose run --rm terrafrom -chdir=setup/ fmt -check
+          docker compose run --rm terraform -chdir=deploy/ init -backend=false
+          docker compose run --rm terraform -chdir=setup/ init -backend=false
+          docker compose run --rm terraform -chdir=deploy/ validate
+          docker compose run --rm terraform -chdir=deploy/ fmt -check
+          docker compose run --rm terraform -chdir=setup/ validate
+          docker compose run --rm terraform -chdir=setup/ fmt -check
