--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -5,7 +5,7 @@ on:
     secrets:
       DOCKERHUB_USER:
         required: true
-        description: "Username for Dockerhub auth"
+        description: "Username for DockerHub auth"
       DOCKERHUB_TOKEN:
         required: true
         description: "Token for DockerHub auth"
@@ -24,11 +24,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Test
         run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
-      - name: Plython flake8
+      - name: Python flake8
         run: docker compose run --rm app sh -c "flake8"
 
-  terrafrom:
-    name: Terrafrom
+  terraform:
+    name: Terraform
     runs-on: ubuntu-22.04
     steps:
       - name: Login to Docker Hub
@@ -38,12 +38,12 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Terrafrom lint
+      - name: Terraform lint
         run: |
           cd infra/
           docker compose run --rm terraform -chdir=deploy/ init -backend=false
           docker compose run --rm terraform -chdir=setup/ init -backend=false
-          docker compose run --rm terraform -chdir=deploy/ validate
-          docker compose run --rm terraform -chdir=deploy/ fmt -check
           docker compose run --rm terraform -chdir=setup/ validate
           docker compose run --rm terraform -chdir=setup/ fmt -check
+          docker compose run --rm terraform -chdir=deploy/ validate
+          docker compose run --rm terraform -chdir=deploy/ fmt -check
