--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
 .DS_Store
 
 # Local .terraform directories
@@ -142,8 +141,8 @@ crash.log
 crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
@@ -167,3 +166,4 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+.deploy.env
