--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -23,5 +23,5 @@ jobs:
         run: |
           export TF_WORKSPACE=${{ github.event.inputs.environment }}
           cd infra/
-          docker compose run --rm terraform -chdir/ init
-          docker compose run --rm terraform -chdir/ destroy -auto-approve
+          docker compose run --rm terraform -chdir=deploy/ init
+          docker compose run --rm terraform -chdir=deploy/ destroy -auto-approve
