--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout/@v4
+        uses: actions/checkout@v4
       - name: Terraform Destroy
         env: 
           AWS_ACCESS_KEY_ID: ${{ vars.AWS_ACCESS_KEY_ID }}
